--- a/src/index.html
+++ b/src/index.html
@@ -3,38 +3,72 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cozy Closing P4</title>
+    <link rel="stylesheet" href="style.css"/>
+    <title>Cozy Closing</title>
 </head>
 <body>
     <header>
-        <section>
-        <img src="/public/image/logo.png"/>
-        <nav class="navegação">
-            <ul>
+        <img src="/public/image/logo 1.png" class="logo"/>
+        <nav class="naveção">
+            <ul class="listagem">
                 <li>
-                    <a href="#"> Home </a>
-                </li>
-                <li> 
-                    <a href="#"> Shop </a>
+                    <a class="caminho" href="#">Início</a>
                 </li>
                 <li>
-                    <a href="#"> Contact </a>
+                    <a class="caminho" href="#">Produtos</a>
                 </li>
                 <li>
-                    <a href="#"> Products </a>
+                    <a class="caminho" href="#">Contato</a>
                 </li>
                 <li>
-                    <a href="#"> About </a>
+                    <a class="caminho" href="#">Sobre nós</a>
                 </li>
             </ul>
-            <button class="menu">
-            <img src="/public/image/menu.png"/>
+        </nav>
+        <div class="botoes">
+        <button>
+            <img src="/public/image/menu.png" class="botão-menu"/>
         </button>
-            <button class="lupa">
-                <img src="/public/image/lupa.png"/>
-            </button>
-        </nav>    
-        </section>
+        <button>
+            <img src="/public/image/lupa.png" class="botão-lupa"/>
+        </button>
+        </div>
     </header>
+    <main>
+        <section class="banner">
+            <div>
+                <img src="/public/image/abajur.png" class="img-abajur"/>
+            </div>
+            <div>
+                <img src="/public/image/poltrona-amarela.png" class="img-poltrona"/>
+            </div>
+         <div class="banner-text">
+                <strong>
+                    Descubra a beleza e o conforto da nossa coleção de móveis
+                </strong>
+            </div>
+           <div>
+            Eleve sua vida com nossos dsigns impressionantes
+           </div>
+        </section>
+    </main>
+    <footer>
+        <strong>Cozy closing</strong>
+        <a class="footer-link" href="#">Portifólio</a>
+        <a class="footer-link" href="#">Reviews</a>
+        <a class="footer-link" href="#">Contatos</a>
+        <div class="footer-text">
+            <strong>Redes Sociais</strong>
+        </div>
+        <button>
+            <img src="/public/image/facebook.png" class="img-facebook"/>
+        </button>
+        <button>
+            <img src="/public/image/Whatsapp.png" class="img-whatsapp"/>
+        </button>
+        <button>
+            <img src="/public/image/instagram.png" class="img-instagram"/>
+        </button>
+    </footer>
 </body>
 </html>
