--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <img src="/public/image/logo 1.png" class="logo"/>
-        <nav class="naveção">
+        <nav class="navegação">
             <ul class="listagem">
                 <li>
                     <a class="caminho" href="#">Início</a>
@@ -36,20 +36,23 @@
     </header>
     <main>
         <section class="banner">
-            <div>
+            <div class="container-img">
+                <div>
                 <img src="/public/image/abajur.png" class="img-abajur"/>
             </div>
             <div>
                 <img src="/public/image/poltrona-amarela.png" class="img-poltrona"/>
+            </div> 
             </div>
          <div class="banner-text">
                 <strong>
                     Descubra a beleza e o conforto da nossa coleção de móveis
                 </strong>
-            </div>
-           <div>
+                <div>
             Eleve sua vida com nossos dsigns impressionantes
            </div>
+        </div>
+           
         </section>
     </main>
     <footer>
