--- a/src/index.html
+++ b/src/index.html
@@ -56,14 +56,20 @@
         </section>
     </main>
     <footer>
-        <strong>Cozy closing</strong>
+        <section class="box-footer">
+            <div class="text-title">
+            <strong>Cozy closing</strong>
+        </div>
+        <div class="text-options">
         <a class="footer-link" href="#">Portifólio</a>
         <a class="footer-link" href="#">Reviews</a>
         <a class="footer-link" href="#">Contatos</a>
+    </div>
         <div class="footer-text">
             <strong>Redes Sociais</strong>
         </div>
-        <button>
+        <div class="bot-footer">
+             <button>
             <img src="/public/image/facebook.png" class="img-facebook"/>
         </button>
         <button>
@@ -72,6 +78,9 @@
         <button>
             <img src="/public/image/instagram.png" class="img-instagram"/>
         </button>
+        </div>
+       
+        </section>
     </footer>
 </body>
 </html>
