--- a/src/index.html
+++ b/src/index.html
@@ -45,41 +45,43 @@
             </div> 
             </div>
          <div class="banner-text">
-                <strong>
+                <strong class="text-one">
                     Descubra a beleza e o conforto da nossa coleção de móveis
                 </strong>
-                <div>
+                <div class="text-two">
             Eleve sua vida com nossos dsigns impressionantes
            </div>
         </div>
-           
         </section>
     </main>
     <footer>
-        <section class="box-footer">
-            <div class="text-title">
-            <strong>Cozy closing</strong>
-        </div>
-        <div class="text-options">
-        <a class="footer-link" href="#">Portifólio</a>
-        <a class="footer-link" href="#">Reviews</a>
-        <a class="footer-link" href="#">Contatos</a>
-    </div>
-        <div class="footer-text">
-            <strong>Redes Sociais</strong>
+        <section class="footer-box">
+        <div class="box-options">
+             <div class="text-title">
+                <strong>Cozy closing</strong>    
+             </div>
+             <div class="text-options">
+                <a class="footer-link" href="#">Portifólio</a>
+                <a class="footer-link" href="#">Reviews</a>
+                <a class="footer-link" href="#">Contatos</a>
+            </div>
         </div>
         <div class="bot-footer">
-             <button>
-            <img src="/public/image/facebook.png" class="img-facebook"/>
-        </button>
-        <button>
-            <img src="/public/image/Whatsapp.png" class="img-whatsapp"/>
-        </button>
-        <button>
-            <img src="/public/image/instagram.png" class="img-instagram"/>
-        </button>
+            <div class="footer-text">
+                <strong>Redes Sociais</strong>
+            </div>
+            <div class="nav-rede">
+                <button>
+                    <img src="/public/image/facebook.png" width="25px" height="25px"/>
+                </button> 
+                <button>
+                    <img src="/public/image/instagram.png" width="25px" height="25px"/>
+                </button>
+                <button>
+                    <img src="/public/image/Whatsapp.png" width="25px" height="25px"/>
+                </button>   
+            </div>
         </div>
-       
         </section>
     </footer>
 </body>
